--- a/prs.html
+++ b/prs.html
@@ -12,10 +12,10 @@
       <h3>Mother name   -:SAKKENA Tk</h3>
       <h3>Age           -:18</h3>
       <h3>Date of birth -:31.05.2003</h3>
-      <h3> Sex          -:Female</h3>
-      <h3>Social Status -:Single</h3>
-      <h3>Religion      -:Islam</h3>
-      <h3>Nationality   -:Indian</h3>
+      <h3> Gender         -:FEMALE</h3>
+      <h3>Social Status -:SINGLE </h3>
+      <h3>Religion      -:ISLAM</h3>
+      <h3>Nationality   -:INDIAN</h3>
       <h3> phone.no    -:9745660821</h3>
       <h3>email.id      -:shiblakt7@gmil.com</h3>
       
